fix(responsiveness): resolve search input and header layout issues
- Set a responsive font size in the search input

- Move the close button inside the form

- Transform the header padding to be responsive

- Add some styles for a better transition in the search container

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -14,7 +14,7 @@
     min-height: max-content;
     width: inherit;
     max-width: inherit;
-    padding: 0.5rem 1rem;
+    padding: min(1.5%, 0.6rem) min(3.5%, 1.2rem);
 
     color: vars.$primary-white;
     background: vars.$header-gradient;
@@ -56,16 +56,28 @@
       }
     }
 
-    .search_container {  // I can use scaleX to hide and display the box of the search input
+    .search_container {
       display: flex;
       overflow: hidden;
-      max-width: 23px;
+      max-width: max(3%, 1rem);
       background-color: transparent;
+      font-size: vars.$medium-font;
       
       padding: 0.1rem;
       border: solid transparent 2px;
       border-radius: 999px;
-      transition: max-width .4s ease-in-out;
+      transition: max-width .3s ease-in-out, border-color .3s ease-in-out;
+
+      &.is_active {
+        max-width: 100%;
+        border-color: vars.$primary-white; 
+
+        .input_container {
+          .search_input {
+            visibility: visible;
+          }
+        }
+      }
 
       .search_btn {
         background-color: inherit;
@@ -74,41 +86,44 @@
         border: none;
         
         padding: .2rem;
-        font-size: 1.2rem;
+        font-size: inherit;
       }
 
       .input_container {
         display: flex;
         place-items: center;
+
         transition: width .3s ease;
-      
         transform-origin: right;
-        //background-color: white;
+
+        form{
+          display:inline-flex;
+        }
 
         .search_input {
+          visibility: hidden;
           background-color: transparent;
           color: inherit;
           border: 0;
           outline: none;
           font-size: inherit;
-          
         }
 
-        div{
-          display: flex;
-          margin-right: .5rem;
-          width: 1rem;
-          .close_icon {
-            font-size: 1.4rem;
-            font-weight: bold;
-            cursor: pointer;
-            color: vars.$primary-white;
+        .close_icon {
+          visibility: hidden;
+
+          font-size: 110%;
+          font-weight: bold;
+          cursor: pointer;
+
+          color: vars.$primary-white;
+          background-color: transparent;
+          border: none;
+
+          &.show {
+            visibility: visible;
           }
         }
-      }
-      &.is_active {
-        max-width: 700px;
-        border-color: vars.$primary-white;  
       }
     }
 
